--- a/assets/scss/theme.scss
+++ b/assets/scss/theme.scss
@@ -85,3 +85,68 @@
 @import "layouts/layouts"; // 1
 
 @import "vendor/jstree/style";
+.card .card-img-container img {
+    backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+    -ms-backface-visibility: hidden;
+    -o-backface-visibility: hidden;
+    transition: -webkit-transform 1s;
+    transition: transform 1s;
+    transition: transform 1s,-webkit-transform 1s;
+    margin:0 auto;
+    }
+    .card .card-img-container .product-additional {
+    position: absolute;
+    top: 0;
+    visibility: hidden;
+    left: 0;
+    width: 100%;
+    -webkit-perspective: 500px;
+    perspective: 500px;
+    opacity: 0;
+    filter: alpha(opacity=0);
+    -webkit-transform: rotateY(-90deg);
+    -moz-transform: rotateY(-90deg);
+    -ms-transform: rotateY(-90deg);
+    -o-transform: rotateY(-90deg);
+    -webkit-transform-style: preserve-3d;
+    transform-style: preserve-3d;
+    transition: all .6s ease-in-out;
+    }
+    .card .card-img-container img {
+    backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+    -ms-backface-visibility: hidden;
+    -o-backface-visibility: hidden;
+    transition: -webkit-transform 1s;
+    transition: transform 1s;
+    transition: transform 1s,-webkit-transform 1s;
+    }
+    
+    .card:hover .card-img-container .product-additional {
+    visibility: visible;
+    opacity: 1;
+    filter: alpha(opacity=100);
+    -webkit-transform: rotateY(0);
+    -moz-transform: rotateY(0);
+    -ms-transform: rotateY(0);
+    -o-transform: rotateY(0);
+    }
+    .card:hover .card-img-container img.card-image {
+    opacity: 0;
+    filter: alpha(opacity=0);
+    -webkit-transform: rotateY(0);
+    -moz-transform: rotateY(0);
+    -ms-transform: rotateY(0);
+    -o-transform: rotateY(0);
+    }
+    .card:hover .card-img-container img {
+    opacity: 1;
+    filter: alpha(opacity=100);
+    -webkit-transform: scale3d(1.1,1.1,1);
+    -moz-transform: scale3d(1.1,1.1,1);
+    -ms-transform: scale3d(1.1,1.1,1);
+    -o-transform: scale3d(1.1,1.1,1);
+    }
